# RaytracerV3

./: .gitignore  .gitmodules  CMakeLists.txt  Color.hpp  Config.ini  Main.cpp  Makefile  Material.hpp  Objects.xml  Perspective.hpp  README.md  RayHit.cpp  RayHit.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  Vector.hpp  colors.xml  stb_image_write.h  todo
Samples/: Objects.xml  Objects2.xml
src/: BasicGLPane.h  Color.hpp  Config.hpp  GLPane.hpp  Geometry.hpp  ImagePlane.hpp  Main.cpp  Makefile  Material.hpp  Perspective.hpp  Point.cpp  Point.hpp  RayHit.cpp  RayHit.hpp  Sphere.cpp  Sphere.hpp  Square.cpp  Square.hpp  Triangle.cpp  Triangle.hpp  Vector.hpp  todo
test/: README  Vec3CrossTest.cpp  Vec3DotTest.cpp
